// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "validate/validate.proto";

enum CommandStatus {
    COMMAND_NOT_HANDLED_YET = 0;
    COMMAND_SUCCEEDED = 1;
    COMMAND_FAILED = 2;
    COMMAND_TIMEOUT = 3;
}

message Command {
    enum Type {
        SYNC_APPLICATION = 0;
        UPDATE_APPLICATION_CONFIG = 1;
        CANCEL_DEPLOYMENT = 2;
        APPROVE_STAGE = 3;
    }

    message SyncApplication {
        string application_id = 1 [(validate.rules).string.min_len = 1];
    }

    message UpdateApplicationConfig {
        string application_id = 1 [(validate.rules).string.min_len = 1];
        string config_path = 2 [(validate.rules).string.min_len = 1];
        string config = 3 [(validate.rules).string.min_len = 1];
    }

    message CancelDeployment {
        string deployment_id = 1 [(validate.rules).string.min_len = 1];
        bool without_rollback = 2;
    }

    message ApproveStage {
        string deployment_id = 1 [(validate.rules).string.min_len = 1];
        string stage_id = 2 [(validate.rules).string.min_len = 1];
    }

    // The generated unique identifier.
    string id = 1 [(validate.rules).string.min_len = 1];
    string piped_id = 2 [(validate.rules).string.min_len = 1];
    string application_id = 3;
    string deployment_id = 4;
    string stage_id = 5;
    string commander = 6;

    CommandStatus status = 20;
    map<string,string> metadata = 21;
    int64 handled_at = 22 [(validate.rules).int64.gt = 0];

    Type type = 30 [(validate.rules).enum.defined_only = true];
    SyncApplication sync_application = 31;
    UpdateApplicationConfig update_application_config = 32;
    CancelDeployment cancel_deployment = 33;
    ApproveStage approve_stage = 34;

    int64 created_at = 100 [(validate.rules).int64.gt = 0];
    int64 updated_at = 101 [(validate.rules).int64.gt = 0];
}
